--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ install:
 script:
  - make test
 docker_build:
- docker build -t hello-world-printer
+	docker build -t hello-world-printer
+after_success:
+ - make docker_build
